# bevy_health_bar3d

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  index.html  test-web.bat
.github/workflows/: bevy-version-check.yml  checks.yml  release.yml
assets/models/: trex.gltf
assets/shaders/: bar.wgsl  bar2d.wgsl
examples/: ally_enemy.rs  bar2d.rs  border.rs  custom_background.rs  custom_foreground.rs  default.rs  dinosaurs.rs  dual_bar.rs  dynamic.rs  multi_camera.rs  offset_mode.rs  rotation.rs  vertical.rs
src/: configuration.rs  constants.rs  lib.rs  material.rs  material2d.rs  mesh.rs  plugin.rs
