[package]
name = "bevy_health_bar3d"
description = "Health bar for bevy implemented as a billboard shader"
version = "3.5.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "gamedev", "healthbar", "billboard"]
categories = ["game-development", "rendering"]
repository = "https://github.com/sparten11740/bevy_health_bar3d.git"
homepage = "https://github.com/sparten11740/bevy_health_bar3d"
authors = ["Jan Wendland"]
include = ["/src", "CHANGELOG.md", "/assets/shaders", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = ["bevy_pbr", "bevy_render"] }
ordered-float = "4.6.0"

[dev-dependencies]
bevy = "0.16.1"
bevy-inspector-egui = "0.31.0"
bevy_tweening = "0.13.0"
