[package]
name = "bevy_health_bar3d"
description = "Health bar for bevy implemented as a billboard shader"
version = "3.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "gamedev", "healthbar", "billboard"]
categories = ["game-development", "rendering"]
repository = "https://github.com/sparten11740/bevy_health_bar3d.git"
homepage = "https://github.com/sparten11740/bevy_health_bar3d"
authors = ["Jan Wendland"]
include = [
    "/src",
    "CHANGELOG.md",
    "/assets/shaders",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
    "bevy_render",
] }
ordered-float = "4.6.0"

[dev-dependencies]
bevy = "0.17.3"
bevy-inspector-egui = "0.35.0"
bevy_tweening = "0.14.0"
[features]
default = ["3d"]
2d = ["bevy/bevy_sprite", "bevy/bevy_sprite_render"]
3d = ["bevy/bevy_pbr"]
